--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <div class="header-contenedor contenedor">
-            <a href="..">
+            <a href="/">
                 <h1 class="header-logo">Bienvenido/a</h1>
             </a>
 
