--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <div class="header-contenedor contenedor">
-            <a href="/cvs/index.html">
+            <a href="index.html">
                 <h1 class="header-logo">Bienvenido/a</h1>
             </a>
 
@@ -27,8 +27,8 @@
 
             <nav class="header-navegacion ocultar">
                 <a href="about.html" class="bold">Acerca de mí</a>
-                <a href="/cvs/index.html#skills" class="bold">Mis habilidades</a>
-                <a href="/cvs/index.html#proyects" class="bold">Proyectos</a>
+                <a href="index.html#skills" class="bold">Mis habilidades</a>
+                <a href="index.html#proyects" class="bold">Proyectos</a>
                 <a href="contact.html" class="bold">Contacto</a>
             </nav>
         </div>
