--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 <body>
     <header class="header">
         <div class="header-contenedor contenedor">
-            <a href="..">
+            <a href="index.html">
                 <h1 class="header-logo">Bienvenido/a</h1>
             </a>
 
@@ -39,8 +39,8 @@
 
             <nav class="header-navegacion ocultar">
                 <a href="about.html" class="bold">Acerca de mí</a>
-                <a href="/..#skills" class="bold">Mis habilidades</a>
-                <a href="/..#proyects" class="bold">Proyectos</a>
+                <a href="index.html#skills" class="bold">Mis habilidades</a>
+                <a href="index.html#proyects" class="bold">Proyectos</a>
                 <a href="contact.html" class="bold">Contacto</a>
             </nav>
         </div>
