--- a/4ngel0-7040-blog/index.html
+++ b/4ngel0-7040-blog/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +14,9 @@
 
     <!--Hojas de Estilo-->
     <link rel="stylesheet" href="assets/css/main.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/dayjs"></script>
+
 </head>
 
 <body>
@@ -154,7 +156,49 @@
         <p>© 2023 Open World. All Rights Reserved.</p>
     </footer>
 
-    <script type="module" src="assets/js/main.js"></script>
+    <script>
+
+        const postTime1 = document.querySelector("#postTime-1");
+        const postTime2 = document.querySelector("#postTime-2");
+        const postTime3 = document.querySelector("#postTime-3");
+
+        function humanizarFecha(fecha) {
+            const time = dayjs();
+            const segundos = time.diff(fecha, "seconds");
+            const minutos = time.diff(fecha, "minute");
+            const horas = time.diff(fecha, "hour");
+            const dias = time.diff(fecha, "day");
+            const anio = dayjs(fecha).format("YYYY");
+
+            switch (true) {
+                case segundos < 60:
+                    return `Hace ${segundos} segundos`;
+                    break;
+                case minutos < 60:
+                    return `Hace ${minutos} minutos`;
+                    break;
+                case horas >= 1 && horas < 24:
+                    return `Hace ${horas} horas`;
+                    break;
+                case (dias > 0) && (dias < 30):
+                    return `Hace ${dias} Dias`;
+                    break;
+                case anio == dayjs().format("YYYY") && dias > 30:
+                    return dayjs(fecha).format("MMMM DD");
+                    break;
+                case anio != dayjs().format("YYYY"):
+                    return dayjs(fecha).format("MMMM DD, YYYY");
+                    break;
+                default:
+                    break;
+            }
+        }
+
+        postTime1.innerHTML = humanizarFecha(dayjs().subtract(25, "minutes"));
+        postTime2.innerHTML = humanizarFecha(dayjs().subtract(7, "hours"));
+        postTime3.innerHTML = humanizarFecha(dayjs().subtract(8, "hours"));
+
+    </script>
 
 </body>
 
