Agregando encriptador de texto

--- a/4ngel0-7040/index.html
+++ b/4ngel0-7040/index.html
@@ -96,9 +96,9 @@
             <div class="proyect">
                 <article class="proyect-article">
                     <h3>Página de pasteleria</h3>
-                    <p class="proyect-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia esse, eius
-                        harum eveniet
-                        doloribus quo minus odit! Porro qui eveniet, repudiandae asperiores sit ab quibusdam!</p>
+                    <p class="proyect-text">Proyecto donde se creo una página web responsive de una pasteleria, con
+                        HTML5, CSS3.
+                    </p>
 
                     <div class="proyect-img">
                         <picture>
@@ -113,10 +113,9 @@
                 </article>
 
                 <article class="proyect-article">
-                    <h3>Página de vacunacion</h3>
-                    <p class="proyect-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia esse, eius
-                        harum eveniet
-                        doloribus quo minus odit! Porro qui eveniet, repudiandae asperiores sit ab quibusdam!</p>
+                    <h3>Campaña Vacunación</h3>
+                    <p class="proyect-text">Maquetación de una página para una campaña de vacunación realizada con HTML
+                        y CSS</p>
 
                     <div class="proyect-img">
                         <picture>
@@ -132,9 +131,7 @@
 
                 <article class="proyect-article">
                     <h3>Blog de Café</h3>
-                    <p class="proyect-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia esse, eius
-                        harum eveniet
-                        doloribus quo minus odit! Porro qui eveniet, repudiandae asperiores sit ab quibusdam! </p>
+                    <p class="proyect-text">Maquetación de una página de un blog sbre cafe</p>
 
                     <div class="proyect-img">
                         <picture>
@@ -150,9 +147,7 @@
 
                 <article class="proyect-article">
                     <h3>Festival de Música</h3>
-                    <p class="proyect-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia esse, eius
-                        harum eveniet
-                        doloribus quo minus odit! Porro qui eveniet, repudiandae asperiores sit ab quibusdam!</p>
+                    <p class="proyect-text">Página de un festival de música donde su utilizo HTML, CSS y JS</p>
 
                     <div class="proyect-img">
                         <picture>
@@ -163,6 +158,23 @@
                     </div>
 
                     <a href="https://musica-festival-rock-edm.netlify.app/" class="boton-proyecto" target="_blank">Ver
+                        Proyecto</a>
+                </article>
+
+                <article class="proyect-article">
+                    <h3>Encriptador de Texto</h3>
+                    <p class="proyect-text">Un encriptador/desencriptador de texto que cuenta con un diseño
+                        responsive y esta desarrollado con HTML, CSS y JS</p>
+
+                    <div class="proyect-img">
+                        <picture>
+                            <source srcset="assets/img/encriptador.avif" type="image/avif">
+                            <source srcset="assets/img/encriptador.webp" type="image/webp">
+                            <img loading="lazy" src="assets/img/encriptador.png" alt="imagen-proyecto">
+                        </picture>
+                    </div>
+
+                    <a href="https://4ngelo12.github.io/Reto01_Encriptador/" class="boton-proyecto" target="_blank">Ver
                         Proyecto</a>
                 </article>
 
